# CodeWarsNQueensProblemWithBacktrack

./: CMakeLists.txt  n_queens.cpp  n_queens.h  unittests.cpp
